feat(user): reconstruct private key endpoint, recover key method
