# module/user/interfaces/http/rest/UserCommandController.go
@@ -242,8 +242,96 @@ func (controller *UserCommandController) SignEIP191(w http.ResponseWriter, r *ht
 		Status:  http.StatusOK,
 		Success: true,
 		Message: "Successfully updated user email verified at.",
-		Data: &types.SignEIP191RequestResponse{
+		Data: &types.SignEIP191Response{
 			Signature: signature,
+		},
+	}
+
+	response.JSON(w)
+}
+
+// ReconstructPrivateKey request handler to reconstruct private key
+func (controller *UserCommandController) ReconstructPrivateKey(w http.ResponseWriter, r *http.Request) {
+	var request types.ReconstructPrivateKeyRequest
+
+	if err := json.NewDecoder(r.Body).Decode(&request); err != nil {
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	// validate request
+	err := types.Validate.Struct(request)
+	if err != nil {
+		errors := err.(validator.ValidationErrors)
+		if len(errors) > 0 {
+			response := viewmodels.HTTPResponseVM{
+				Status:    http.StatusBadRequest,
+				Success:   false,
+				Message:   types.ValidationErrors[errors[0].StructNamespace()],
+				ErrorCode: apiError.InvalidPayload,
+			}
+
+			response.JSON(w)
+			return
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    http.StatusBadRequest,
+			Success:   false,
+			Message:   "Invalid payload request.",
+			ErrorCode: apiError.InvalidRequestPayload,
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	recoveredPublicKey, err := controller.UserCommandServiceInterface.ReconstructPrivateKey(context.TODO(), serviceTypes.ReconstructPrivateKey{
+		ShareKey:      request.ShareKey,
+		WalletAddress: request.WalletAddress,
+	})
+	if err != nil {
+		var httpCode int
+		var errorMsg string
+
+		switch err.Error() {
+		case errors.EthInvalidUserPrivateKey,
+			errors.EthInvalidUserPublicKey,
+			errors.UnauthorizedAccess:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Signer wallet error."
+		case errors.DatabaseError:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Error occurred while reconstructing the private key."
+		default:
+			httpCode = http.StatusInternalServerError
+			errorMsg = "Please contact technical support."
+		}
+
+		response := viewmodels.HTTPResponseVM{
+			Status:    httpCode,
+			Success:   false,
+			Message:   errorMsg,
+			ErrorCode: err.Error(),
+		}
+
+		response.JSON(w)
+		return
+	}
+
+	response := viewmodels.HTTPResponseVM{
+		Status:  http.StatusOK,
+		Success: true,
+		Message: "Successfully reconstructed the private key.",
+		Data: &types.ReconstructPrivateKeyResponse{
+			RecoveredPublicKey: recoveredPublicKey,
 		},
 	}
 
@@ -341,7 +429,7 @@ func (controller *UserCommandController) SignEIP712(w http.ResponseWriter, r *ht
 		Status:  http.StatusOK,
 		Success: true,
 		Message: "Successfully signed EIP-712 message.",
-		Data: &types.SignEIP712RequestResponse{
+		Data: &types.SignEIP712Response{
 			Signature: signature,
 		},
 	}
